{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 200,
  "lineage": "4562ffc4-4208-5234-daf5-99ffb8d792e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eventcart-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082203021:internet-gateway/igw-0af5fcb20056af84e",
            "id": "igw-0af5fcb20056af84e",
            "owner_id": "221082203021",
            "tags": {
              "Name": "eventcart-igw"
            },
            "tags_all": {
              "Name": "eventcart-igw"
            },
            "vpc_id": "vpc-015534d428a0838eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eventcart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eventcart-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082203021:route-table/rtb-0c75a1319413e9f36",
            "id": "rtb-0c75a1319413e9f36",
            "owner_id": "221082203021",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af5fcb20056af84e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eventcart-public-rt"
            },
            "tags_all": {
              "Name": "eventcart-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-015534d428a0838eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eventcart-igw",
            "aws_vpc.eventcart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eventcart-rta-public-subent-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0006a448ee1ece053",
            "route_table_id": "rtb-0c75a1319413e9f36",
            "subnet_id": "subnet-02445136345121b9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eventcart-igw",
            "aws_route_table.eventcart-public-rt",
            "aws_subnet.eventcart-public_subent_01",
            "aws_vpc.eventcart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eventcart-rta-public-subent-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04803749e1bbc21a5",
            "route_table_id": "rtb-0c75a1319413e9f36",
            "subnet_id": "subnet-0a99fee5cec253b1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eventcart-igw",
            "aws_route_table.eventcart-public-rt",
            "aws_subnet.eventcart-public_subent_02",
            "aws_vpc.eventcart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eventcart-public_subent_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082203021:subnet/subnet-02445136345121b9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02445136345121b9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082203021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eventcart-public_subent_01"
            },
            "tags_all": {
              "Name": "eventcart-public_subent_01"
            },
            "vpc_id": "vpc-015534d428a0838eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eventcart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eventcart-public_subent_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082203021:subnet/subnet-0a99fee5cec253b1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a99fee5cec253b1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082203021",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eventcart-public_subent_02"
            },
            "tags_all": {
              "Name": "eventcart-public_subent_02"
            },
            "vpc_id": "vpc-015534d428a0838eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eventcart-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eventcart-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082203021:vpc/vpc-015534d428a0838eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08b2db86decaddaa0",
            "default_route_table_id": "rtb-0c2036577fa73ccb2",
            "default_security_group_id": "sg-0415d45da71d106e0",
            "dhcp_options_id": "dopt-038057c8534fdda15",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015534d428a0838eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2036577fa73ccb2",
            "owner_id": "221082203021",
            "tags": {
              "Name": "eventcart-vpc"
            },
            "tags_all": {
              "Name": "eventcart-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082203021:security-group/sg-0554a212c31bba82b",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0554a212c31bba82b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Worker node to worker node",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "eks-test",
            "name_prefix": "",
            "owner_id": "221082203021",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015534d428a0838eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eventcart-vpc"
          ]
        }
      ]
    }
  ]
}